Myname is suman

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Hi My nam eis ashadeep </h2>
+    <h2>hi my name is ashadeep</h2>
 </body>
 </html>
